bk_ida/gobmkida/c3/do_owl_defend
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/engine/owl.c:2273:10: error: conflicting types for 'do_owl_defend'
__int64  do_owl_defend( 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/engine/owl.c:138:12: note: previous declaration is here
static int do_owl_defend(int str, int *move, int *wormid,
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/engine/owl.c:2389:9: error: use of undeclared identifier 'eyevalue'
v78 = ( eyevalue)-1; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/engine/owl.c:2603:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[i] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/engine/owl.c:2671:5: error: invalid operands to binary expression ('struct eyevalue' and 'int')
v78 == 1, 
~~~ ^  ~
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_defend/src/obj/1/owl.o] Error 1
